[package]
name = "setting"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "The styles of all graphics elements"
repository = "https://github.com/oovm/graphics-rs"
documentation = "https://docs.rs/setting"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies.serde]
optional = true
version = "1.0.136"


[features]
default = []
