[package]
name = "graphics-2d"
version = "0.0.3"
authors = ["Aster <192607617@qq.com>"]
description = "The representation of a circle"
repository = "https://github.com/oovm/smallest-enclosing-ball"
documentation = "https://docs.rs/graphics-2d"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
wolfram_wxf = "0.6.0"
serde = "1.0.136"

[dependencies.graphics-shape]
version = "0.0.*"
features = []
path = "../graphics-shape"

[dependencies.graphics-style]
version = "0.2.*"
features = []
path = "../graphics-style"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/katex.html"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"

