[package]
name = "graphics-2d"
version = "0.0.3"
authors = ["Aster <192607617@qq.com>"]
description = "The representation of a circle"
repository = "https://github.com/oovm/smallest-enclosing-ball"
documentation = "https://docs.rs/graphics-2d"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = "1.0.136"
serde_derive = "1.0.136"
wolfram-expr = { version = "0.1.1", optional = true }

[dependencies.graphics-shape]
version = "0.0.*"
features = []
path = "../graphics-shape"

[dependencies.shape-core]
version = "0.1.1"
features = []

[dependencies.graphics-style]
version = "0.2.*"
features = []
path = "../graphics-style"

[dev-dependencies]

[features]
default = []
wolfram-expr = [
    "dep:wolfram-expr",
    "graphics-shape/wolfram-expr",
    "graphics-style/wolfram-expr"
]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/katex.html"]
