[package]
name = "graphics-shape"
version = "0.0.4"
authors = ["Aster <192607617@qq.com>"]
description = "The representation of a circle"
repository = "https://github.com/oovm/smallest-enclosing-ball"
documentation = "https://docs.rs/graphics-shape"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies.shape-core]
version = "0.0.4"
features = []

[dev-dependencies]

[features]
default = []
wolfram = []