[package]
name = "graphics-shape"
version = "0.0.5"
authors = ["Aster <192607617@qq.com>"]
description = "The representation of a circle"
repository = "https://github.com/oovm/graphics-rs"
documentation = "https://docs.rs/graphics-shape"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies.shape-core]
version = "0.1.1"
features = []

[dev-dependencies]

[features]
default = []
wolfram-expr = ["shape-core/wolfram-expr"]
