[package]
name = "graphics-style"
version = "0.2.9"
authors = ["Aster <192607617@qq.com>"]
description = "The styles of all graphics elements"
repository = "https://github.com/oovm/graphics-rs"
documentation = "https://docs.rs/graphics-style"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.m", "*.json", "test/"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.79"

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"

