[package]
name = "graphics-style"
version = "0.2.10"
authors = ["Aster <192607617@qq.com>"]
description = "The styles of all graphics elements"
repository = "https://github.com/oovm/graphics-rs"
documentation = "https://docs.rs/graphics-style"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.m", "*.json", "test/"]

[dependencies]
serde = { version = "1.0.136", features = ["derive", "rc"] }
image = { version = "0.24.1" }
palette = "0.6.0"
setting = { version = "0.2.2", features = ["serde"] }
wolfram-library-link = { version = "0.2.3" , optional = true}

[dependencies.graphics-error]
version = "0.0.0"
path = "../graphics-error"

[dev-dependencies]
serde_json = "1.0.79"

[features]
default = []
wolfram = ["wolfram-library-link"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"

