[package]
name = "graphics"
version = "0.0.2"
authors = ["Aster <192607617@qq.com>"]
description = "The representation of a circle"
repository = "https://github.com/oovm/smallest-enclosing-ball"
documentation = "https://docs.rs/circle"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
graphics-style = "0.0.2"
wolfram_wxf = {version = "0.6.0", optional = true}
serde = {version = "1.0.136", optional = true}
rand = {version = "0.8.5", optional = true}

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/katex.html"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"

