[package]
name = "graphics"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "The styles of all graphics elements"
repository = "https://github.com/oovm/graphics-rs"
documentation = "https://docs.rs/graphics"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dependencies.graphics-shape]
version = "0.0.*"
features = []
path = "../graphics-shape"

[dependencies.graphics-style]
version = "0.2.*"
features = []
path = "../graphics-style"

[dependencies.graphics-2d]
version = "0.0.*"
optional = true
features = []
path = "../graphics-2d"

[dependencies.graphics-3d]
version = "0.0.*"
optional = true
features = []
path = "../graphics-3d"

[dependencies.graphics-svg]
version = "0.0.*"
optional = true
features = []
path = "../graphics-svg"

[dependencies.graphics-wolfram]
version = "0.0.*"
optional = true
features = []
path = "../graphics-wolfram"

[features]
default = ["2d", "svg"]
2d = ["graphics-2d"]
3d = ["graphics-3d"]
svg = ["graphics-svg"]
bitmap = []
canvas = []
wolfram = ["graphics-wolfram"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"

