[package]
name = "ball"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "The n-dimension ball"
repository = "https://github.com/oovm/smallest-enclosing-ball"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
num = "0.4.0"

[dev-dependencies]

[features]
default = ["f32"]
f32 = []
f64 = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
